# json-db

./: .gitignore  README.md  pyproject.toml
.github/workflows/: badges.yml  ci.yml
ci/: calculate_complexity.sh  calculate_coverage.sh  calculate_maintainability.sh  run_formatter.sh  run_linter.sh  run_tests.sh  setup_hooks.sh
git_hooks/: pre-push
json_db/: __init__.py  json_database.py
tests/: test_db.py  test_library_import.py
