[tool.poetry]
name = "json-db"
version = "0.0.0"
description = "An in-memory database using .json files, akin to MongoDB for lightweight, RAM-based data handling."
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
